typescript/checker/tests/conformance/es6/modules/multipleDefaultExports02.ts.stderr
error: ResolvedFailed {
    span: Span {
        lo: BytePos(
            163,
        ),
        hi: BytePos(
            188,
        ),
        ctxt: #0,
    },
    base: "$DIR/tests/conformance/es6/modules",
    src: Atom('./m1' type=inline),
}
  --> $DIR/tests/conformance/es6/modules/multipleDefaultExports02.ts:14:1
   |
14 | import Entity from "./m1"
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

